--- a/ndukaku.html
+++ b/ndukaku.html
@@ -8,31 +8,7 @@
     <title>Ndukaku.html</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <style >
-        header {
-    font-size: 15px;
-    background-color: skyblue
-}
-
-head {
-    text-align: center;
-    padding-left: 300px; 
-    padding-right: 300px;
-}
-
-body {
-    border: 40px;
-    padding-left: 100px; 
-    padding-right: 100px;
-    margin: 0px;    
-}
-
-.head {
-    text-align: center;
-}
-
-img {
-    padding-left: 45%;
-}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     </style>
 </head>
 
@@ -49,7 +25,7 @@ img {
             </p>
     </div>
             <img src="https://res.cloudinary.com/mikesunny/image/upload/v1566877390/passport_pz1nhr.jpg"
-            alt="author's image" width="100px" height="100px">
+            alt="author's image" >
       
     </head>
     <div id="objective">
@@ -181,6 +157,23 @@ img {
             <h3>REFEREES:</h3>
         </header>
         <P>Available on Request.</P>
+    </div>
+    <div class ="info-div">
+        <header class="header">
+                <h3>CONTACT FORM</h3>
+        </header>
+            
+    <form>
+        <label for="name">Name</label></br>
+        <input type="Name" min="4" placeholder="Your Name" required></br>
+        <label for="E-mail">E-mail</label></br>
+        <input type="email"  placeholder="Your E-mail" required></br>
+        <label for="title">Title</label></br>
+        <input type="comment"  placeholder="Your Title" required></br>
+        <label for="Comment">Message</label></br>
+        <input type="comment" min="20" placeholder="Your Message" >
+        <button type="submit" >Submit</button>
+    </form>
     </div>
 </body>
 
